# sunshine_language

./: Cargo.toml  README.md  doc.md
.github/workflows/: rust.yml
src/: analysis.rs  ast.rs  bin.rs  context.rs  error.rs  hir.rs  identifier.rs  input_stream.rs  item_table.rs  lexer.rs  lib.rs  main.rs  parser.rs  path.rs  source.rs  symbol_table.rs  token_tree.rs  util.rs
src/analysis/: scope.rs
src/ast/: block.rs  expression.rs  expressions.rs  identifier.rs  item.rs  mod.rs  pretty_print.rs  statement.rs
src/ast/expressions/: mod.rs  shunting_yard.rs
src/ast/item/: function.rs  mod.rs  module.rs  struct.rs
src/ast/statement/: let.rs  mod.rs
src/error/: error_reporter.rs  expected_token.rs  library.rs  mod.rs  report_provider.rs  types.rs
src/hir/: builder.rs  scope.rs  translation.rs  types.rs
src/hir/builder/: body.rs
src/lexer/: keyword.rs  mod.rs  number.rs  operator.rs  punctuation.rs  util.rs
src/parser/: expression.rs  item.rs  mod.rs  operator_expression.rs  shunting_yard.rs  statement.rs
src/parser/expressions/: mod.rs  operator.rs  shunting_yard.rs
src/parser/item/: function.rs  mod.rs  module.rs  struct.rs
src/parser/operator_expression/: infix.rs  infix_notation.rs  polish_notation.rs  postfix.rs
src/parser/statement/: let.rs  mod.rs
src/path/: absolute.rs  relative.rs
src/source/: mod.rs
src/util/: monotonic.rs  span.rs
