[package]
name = "sunshine_lang"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.65"
clap = { version = "4.0.15", features = ["derive"] }
itertools = "0.10.5"
once_cell = "1.16.0"
owned_chars = { git = "https://github.com/durka/owned-chars.git" }
strum = { version = "0.24.1", features = ["derive"] }
thiserror = "1.0.37"

[lib]
name = "compiler"
path = "src/lib.rs"

[[bin]]
name = "compiler_frontend"
path = "src/bin.rs"

[profile.release]
lto = true
codegen-units = 1
strip = "debuginfo"
